# ChangeLog for dev-lang/python
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.358 2008/12/13 20:54:39 neurogeek Exp $

*python-2.6.1 (13 Dec 2008)

  13 Dec 2008; Jesus Rivero <neurogeek@gentoo.org>
  +files/python-2.6_turkish.patch, +python-2.6.1.ebuild:
  Version bump

  09 Dec 2008; Mike Frysinger <vapier@gentoo.org> python-2.5.2-r8.ebuild,
  python-2.6-r5.ebuild:
  Set expat to default to on.

  08 Dec 2008; Mike Frysinger <vapier@gentoo.org> python-2.5.2-r8.ebuild,
  python-2.6-r5.ebuild:
  Make dev-libs/expat optional via USE=expat.

  06 Dec 2008; Jesus Rivero <neurogeek@gentoo.org>
  +files/python-2.5.2_turkish.patch, python-2.5.2-r8.ebuild:
  Fixed support for tr_TR locale. Bug #250075. Thanks to Serkan

*python-2.6-r5 (17 Nov 2008)

  17 Nov 2008; <neurogeek@gentoo.org> -python-2.6-r4.ebuild,
  +python-2.6-r5.ebuild:
  Revision bump. Fixes Bug #219238. Removed older version

  26 Oct 2008; Ali Polatel <hawking@gentoo.org> python-2.4.4-r5.ebuild,
  python-2.4.4-r6.ebuild, python-2.4.4-r14.ebuild, python-2.4.4-r15.ebuild,
  python-2.5.2-r7.ebuild, python-2.5.2-r8.ebuild:
  Use python_{en,dis}able_pyc.

*python-2.6-r4 (26 Oct 2008)

  26 Oct 2008; Ali Polatel <hawking@gentoo.org> +python-2.6-r4.ebuild:
  Revbump. Updated patchset to use PYTHONDONTWRITEBYTECODE instead of
  PYTHON_DONT_COMPILE.

  25 Oct 2008; Ali Polatel <hawking@gentoo.org> python-2.5.2-r7.ebuild,
  python-2.5.2-r8.ebuild, python-2.6-r3.ebuild:
  Nuke the useless bootstrap USE flag for >=python-2.5. Thanks to Arfrever.

*python-2.6-r3 (25 Oct 2008)

  25 Oct 2008; Ali Polatel <hawking@gentoo.org> -python-2.6-r2.ebuild,
  +python-2.6-r3.ebuild:
  Revbump. Bump eselect-python DEPEND to fix bug 240149. Don't install empty
  directories.

*python-2.6-r2 (07 Oct 2008)

  07 Oct 2008; Ali Polatel <hawking@gentoo.org> -python-2.6-r1.ebuild,
  +python-2.6-r2.ebuild: