@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/Attic/python-2.6-r5.ebuild,v 1.3 2008/12/09 18:46:31 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/Attic/python-2.6-r5.ebuild,v 1.4 2008/12/24 20:47:52 neurogeek Exp $
 
 # NOTE about python-portage interactions :
 # - Do not add a pkg_setup() check for a certain version of portage
@@ -42,7 +42,7 @@ DEPEND=">=app-admin/eselect-python-20080925
 		berkdb? ( >=sys-libs/db-3.1 )
 		gdbm? ( sys-libs/gdbm )
 		ssl? ( dev-libs/openssl )
-		doc? ( dev-python/python-docs:2.5 )
+		doc? ( dev-python/python-docs:2.6 )
 		expat? ( dev-libs/expat )
 	)"
 
