@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.358 2008/12/13 20:54:39 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.359 2008/12/24 20:47:52 neurogeek Exp $
+
+  24 Dec 2008; Jesus Rivero <neurogeek@gentoo.org> python-2.6-r5.ebuild,
+  python-2.6.1.ebuild:
+  Added dev-python/python-docs:2.6
 
 *python-2.6.1 (13 Dec 2008)
 
